objects/Integration_Log__c.object
<CustomObject>
    <description>This object is used for logging all web service calls made into salesforce from external systems.</description>
    <fields>
        <fullName>Integration_Type__c</fullName>
        <label>Integration Type</label>
        <picklist>
            <picklistValues>
                <fullName>INBOUND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OUTBOUND</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pay_Load__c</fullName>
        <description>Text Dump of the payload that is a part of the web service transaction.</description>
        <label>Pay Load</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Process_Name__c</fullName>
        <description>The name of the process (if required) which results in a web service invocation (in bound or outbound)</description>
        <label>Process Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <description>Name  of the source system that is making the inbound web service call to salesforce.</description>
        <label>Source System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_System__c</fullName>
        <description>The name of the target system for any outbound calls from salesforce.</description>
        <label>Target System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Id__c</fullName>
        <description>The unique Id for every web service transaction with salesforce. For any inbound web service calls into salesforce , the Id should be provided by the external system. For any out bound calls from salesforce , this should be provided from salesforce.</description>
        <label>Transaction Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Integration Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Transaction_Id__c</columns>
        <columns>Pay_Load__c</columns>
        <columns>Process_Name__c</columns>
        <columns>Source_System__c</columns>
        <columns>Integration_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>INT-{000000}</displayFormat>
        <label>Integration Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Logs</pluralLabel>
    <recordTypes>
        <fullName>INBOUND</fullName>
        <active>true</active>
        <description>Record Type for any inbound web service calls</description>
        <label>INBOUND</label>
    </recordTypes>
    <recordTypes>
        <fullName>OUTBOUND</fullName>
        <active>true</active>
        <description>Record Type for any outbound web service calls</description>
        <label>OUTBOUND</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>